# sales_report

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/cli/: cli.py
src/core/: repository.py
src/core/models/: report.py  sale.py
src/core/parsers/: csv_read.py  parser_contract.py
src/core/repositories/: sale_repository.py
src/core/services/: report_service.py
src/output/: formater_contract.py  json_formater.py  text_formater.py
src/output/formatters/: formater_contract.py  json_formater.py  text_formater.py
src/output/writers/: json_writer.py  text_writer.py  writer_contract.py
src/parser/: csv_read.py
src/utils/: cli_message.py  validate_struct_csv.py
tests/: conftest.py  test_report_services.py  test_repository.py  test_sale_repository.py  test_services.py  test_writers.py
