[project]
name = "vendas-cli"
version = "0.1.0"
description = "Gerador de relatorios de vendas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
vendas-cli = "cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
